use Data.Vector instead of piling up everything in List

--- a/progsdat.cabal
+++ b/progsdat.cabal
@@ -22,3 +22,4 @@ executable progsdat
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , binary
+                     , vector
