--- a/progsdat.cabal
+++ b/progsdat.cabal
@@ -18,8 +18,10 @@ executable progsdat
   main-is:             Main.hs
   other-modules:       Parse
                        Types
+                       Util
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
                      , bytestring
                      , binary
                      , vector
+                     , data-binary-ieee754
